Closed
Bug 875824
Opened 12 years ago
Closed 12 years ago
Nightly crash on startup Galaxy S4 ( SIV ) GT-I9505
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox21 unaffected, firefox22 unaffected, firefox23 unaffected, firefox24+ verified, fennec24+)
VERIFIED
FIXED
Firefox 24
Tracking | Status | |
---|---|---|
firefox21 | --- | unaffected |
firefox22 | --- | unaffected |
firefox23 | --- | unaffected |
firefox24 | + | verified |
fennec | 24+ | --- |
People
(Reporter: glandium, Assigned: glandium)
References
Details
(Keywords: crash, regression, reproducible, Whiteboard: [native-crash])
Attachments
(2 files)
1.54 KB,
patch
|
jseward
:
review+
|
Details | Diff | Splinter Review |
1.44 KB,
patch
|
kats
:
review+
|
Details | Diff | Splinter Review |
As per bug 874708 comment 11:
"I think a reasonable way forward here is to setup a blacklist of devices where we disable on-demand decompression at runtime."
I'm keeping bug 874708 open for a real fix, this is a bug for temporary mitigation (and framework if we need to deal with similar crashes on other devices).
Assignee | ||
Comment 1•12 years ago
|
||
Attachment #753916 -
Flags: review?(nfroyd)
Assignee | ||
Updated•12 years ago
|
Assignee: nobody → mh+mozilla
Assignee | ||
Comment 2•12 years ago
|
||
This should work, but I'd like AaronMT or kbrosnan to validate
(build at http://people.mozilla.org/~mhommey/fennec-24.0a1.en-US.android-arm.apk )
Attachment #753929 -
Flags: review?(bugmail.mozilla)
Comment 3•12 years ago
|
||
Comment on attachment 753929 [details] [diff] [review]
Disable on-demand decompression of the linker on devices where it is known to cause crashes
Review of attachment 753929 [details] [diff] [review]:
-----------------------------------------------------------------
r=me with comment addressed.
::: mobile/android/base/mozglue/GeckoLoader.java.in
@@ +207,5 @@
>
> + // Disable on-demand decompression of the linker on devices where it
> + // is known to cause crashes.
> + if (android.os.Build.MANUFACTURER == "samsung" &&
> + android.os.Build.MODEL == "GT-I9505") {
You should .equals() instead of == for strings. In general also the idiom "constant".equals(variable) is better than variable.equals("constant") because the former doesn't NPE if variable is null. I don't think the Build constants will be null though so it doesn't matter here.
Attachment #753929 -
Flags: review?(bugmail.mozilla) → review+
Comment 4•12 years ago
|
||
(In reply to Mike Hommey [:glandium] from comment #2)
> This should work, but I'd like AaronMT or kbrosnan to validate
> (build at
> http://people.mozilla.org/~mhommey/fennec-24.0a1.en-US.android-arm.apk )
Build works for me.
>+ // Disable on-demand decompression of the linker on devices where it
>+ // is known to cause crashes.
>+ if (android.os.Build.MANUFACTURER == "samsung" &&
>+ android.os.Build.MODEL == "GT-I9505") {
>+ putenv("MOZ_LINKER_ONDEMAND=0");
>+ }
Matches look good to me:
$ getprop | grep product
[ril.product_code]: [GT-I9505ZKABTU]
[ro.product.brand]: [samsung]
[ro.product.manufacturer]: [samsung]
[ro.product.model]: [GT-I9505]
Assignee | ||
Updated•12 years ago
|
Assignee | ||
Comment 5•12 years ago
|
||
Comment on attachment 753916 [details] [diff] [review]
Allow to disable on-demand decompression at runtime
Julian, can you take a look at this while Nathan is on PTO?
Attachment #753916 -
Flags: review?(nfroyd) → review?(jseward)
Comment 6•12 years ago
|
||
Comment on attachment 753916 [details] [diff] [review]
Allow to disable on-demand decompression at runtime
Review of attachment 753916 [details] [diff] [review]:
-----------------------------------------------------------------
Looks plausible to me.
Attachment #753916 -
Flags: review?(jseward) → review+
Assignee | ||
Comment 7•12 years ago
|
||
Comment 8•12 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/d47ebe4dfea6
https://hg.mozilla.org/mozilla-central/rev/4655d7317a03
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 24
Comment 9•12 years ago
|
||
Latest mozilla-central builds today startup on my device
Status: RESOLVED → VERIFIED
Updated•12 years ago
|
Updated•4 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•