Bug 875824 - Allow to disable on-demand decompression at runtime. r=sewardj